--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>activemq</module>
+        <module>activemq-consumer</module>
+        <module>activemq-producter</module>
     </modules>
 
 
