(*)aactivemq 十五、实战：限时订单

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>activemq-consumer</module>
         <module>activemq-producter</module>
         <module>activemq-asyncApp</module>
+        <module>activemq-delayOrder</module>
     </modules>
 
 
